force-app/main/default/objects/LINE_Message__c/LINE_Message__c.object-meta.xml
<CustomObject>
    <description
  >One inbound or outbound LINE message. Detail of LINE_Conversation__c, so its visibility follows the conversation.</description>
    <label>LINE Message</label>
    <nameField>
        <displayFormat>LM-{0000000}</displayFormat>
        <label>Message Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LINE Messages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>