force-app/main/default/objects/LINE_Message__c/fields/Content_Document_Id__c.field-meta.xml
<CustomField>
    <fullName>Content_Document_Id__c</fullName>
    <description>ContentDocument of the downloaded or sent file.</description>
    <label>Content Document ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>