force-app/main/default/objects/LINE_Message__c/fields/Error__c.field-meta.xml
<CustomField>
    <fullName>Error__c</fullName>
    <description
  >LINE error message when sending or downloading failed. Never contains secrets or tokens.</description>
    <label>Error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>