force-app/main/default/objects/LINE_Message__c/fields/File_Name__c.field-meta.xml
<CustomField>
    <fullName>File_Name__c</fullName>
    <description>File name of a file message.</description>
    <label>File Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>