force-app/main/default/objects/LINE_Message__c/fields/File_Size__c.field-meta.xml
<CustomField>
    <fullName>File_Size__c</fullName>
    <description>File size in bytes.</description>
    <label>File Size</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>