force-app/main/default/objects/LINE_Message__c/fields/LINE_Conversation__c.field-meta.xml
<CustomField>
    <fullName>LINE_Conversation__c</fullName>
    <description
  >Parent conversation. Master-detail: sharing is controlled by the conversation, reparenting is off.</description>
    <label>LINE Conversation</label>
    <referenceTo>LINE_Conversation__c</referenceTo>
    <relationshipLabel>LINE Messages</relationshipLabel>
    <relationshipName>LINE_Messages</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>