force-app/main/default/objects/LINE_Message__c/fields/Line_Message_Id__c.field-meta.xml
<CustomField>
    <fullName>Line_Message_Id__c</fullName>
    <description
  >LINE message.id of an inbound message; used to download its content.</description>
    <externalId>true</externalId>
    <label>LINE Message ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>