force-app/main/default/objects/LINE_Message__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>Location message as "title, address (lat,long)".</description>
    <label>Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>