force-app/main/default/objects/LINE_Message__c/fields/Message_Type__c.field-meta.xml
<CustomField>
    <fullName>Message_Type__c</fullName>
    <description
  >LINE message type. API values match LINE's message.type.</description>
    <label>Message Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>text</fullName>
                <label>Text</label>
            </value>
            <value>
                <fullName>image</fullName>
                <label>Image</label>
            </value>
            <value>
                <fullName>video</fullName>
                <label>Video</label>
            </value>
            <value>
                <fullName>audio</fullName>
                <label>Audio</label>
            </value>
            <value>
                <fullName>file</fullName>
                <label>File</label>
            </value>
            <value>
                <fullName>sticker</fullName>
                <label>Sticker</label>
            </value>
            <value>
                <fullName>location</fullName>
                <label>Location</label>
            </value>
            <value>
                <fullName>unsupported</fullName>
                <label>Unsupported</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>