force-app/main/default/objects/LINE_Message__c/fields/Public_Url__c.field-meta.xml
<CustomField>
    <fullName>Public_Url__c</fullName>
    <description
  >Expiring public URL of an outbound image, video, audio file or document link (ContentDistribution). Long Text Area, not URL: URL and Text fields stop at 255 characters and Salesforce content URLs can be longer (DECISIONS DEC-14).</description>
    <label>Public URL</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>