force-app/main/default/objects/LINE_Message__c/fields/Sender__c.field-meta.xml
<CustomField>
    <fullName>Sender__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Outbound: the user who sent the message.</description>
    <label>Sender</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>LINE Messages Sent</relationshipLabel>
    <relationshipName>LINE_Messages_Sent</relationshipName>
    <type>Lookup</type>
</CustomField>