force-app/main/default/objects/LINE_Message__c/fields/Sent_At__c.field-meta.xml
<CustomField>
    <fullName>Sent_At__c</fullName>
    <description
  >Inbound: the webhook event timestamp. Outbound: when it was sent. Used for ordering and keyset paging.</description>
    <label>Sent At</label>
    <type>DateTime</type>
</CustomField>