force-app/main/default/objects/LINE_Message__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Delivery or download state of the message.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Received</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Downloading</fullName>
            </value>
            <value>
                <fullName>Download Failed</fullName>
            </value>
            <value>
                <fullName>Too Large</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>