force-app/main/default/objects/LINE_Message__c/fields/Sticker_Id__c.field-meta.xml
<CustomField>
    <fullName>Sticker_Id__c</fullName>
    <description>LINE sticker ID.</description>
    <label>Sticker ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>