force-app/main/default/objects/LINE_Message__c/fields/Text__c.field-meta.xml
<CustomField>
    <fullName>Text__c</fullName>
    <description
  >Message text (LINE maximum is 5,000 characters). Always rendered as plain text.</description>
    <label>Text</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>