force-app/main/default/objects/LINE_Message__c/fields/Webhook_Event_Id__c.field-meta.xml
<CustomField>
    <fullName>Webhook_Event_Id__c</fullName>
    <description
  >LINE webhookEventId of an inbound message. Unique upsert key that makes redeliveries no-ops.</description>
    <externalId>true</externalId>
    <label>Webhook Event ID</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>